--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/style2.css
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/style2.css
@@ -25,7 +25,9 @@
                   body{
                     font-size: 16px;
                   }
-   
+   button { border-radius:78%
+
+   }
   
   
   
