--- a/fundamentos/3-introdução-a-HTML-e-CSS/dia2/style2.css
+++ b/fundamentos/3-introdução-a-HTML-e-CSS/dia2/style2.css
@@ -1,34 +1,32 @@
 <style>
-        #amr{
-            background-color: yellow;
-        }
-        #ver{
-            background-color: red;
-        }  
-        #mar{
-            background-color: brown;
-        }
+h2 {
+    color: greenyellow;
+    font-size: 1em;
+}
 
-        p{
-            font-size: 3em;
-            text-align: center;
-            text-decoration:solid;
-            tex
-        }
-        h1{
-            font-family: sans-serif;
-            }
-            p{ font-weight:  600;
-                 font-style:  oblique;
-                 
-            }
-                  body{
-                    font-size: 16px;
-                  }
-   button { border-radius:78%
+body {
+    font-size: 20px;
+    background-color: rgb(502, 200, 314);
+}
 
-   }
-  
-  
-  
-  </style>
+#junco {
+    background-color: blueviolet;
+
+}
+
+#junco {
+    color: aquamarine;
+}
+
+#ssa {
+    color: rgb(554, 123, 444);
+}
+
+p {
+    font-family: cursive, Arial, Helvetica, sans-serif;
+}
+
+.phones {
+    font-weight: bold;
+    line-height: 30px;
+}
